--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -10,5 +10,5 @@
   <label for="choice{{ forloop.counter }}"> {{choice.choice_text}} </label></br> 
 {% endfor %}
 <input type="submit" value="Vote" />
-<form>
+</form>
 
